Fix GitHub z-index with search overlay

--- a/src/button/button.css
+++ b/src/button/button.css
@@ -32,7 +32,7 @@
 }
 
 #plasmo-shadow-container {
-    z-index: 90 !important;
+    z-index: 30 !important;
 }
 
 #plasmo-inline {
